--- a/web_dynamic/templates/2-hbnb.html
+++ b/web_dynamic/templates/2-hbnb.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="static/scripts/1-hbnb.js?{{cache_id}}"></script>
+    <script type="text/javascript" src="static/scripts/2-hbnb.js?{{cache_id}}"></script>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../static/styles/4-common.css?{{cache_id}}">
     <link rel="stylesheet" type="text/css" href="../static/styles/3-header.css?{{cache_id}}"  >
@@ -14,6 +14,7 @@
   </head>
   <body>
     <header>
+      <div id="api_status"></div>
       <div class="logo"></div>
     </header>
     <div class="container">
@@ -76,6 +77,5 @@
     <footer>
       <p>Holberton School</p>
     </footer>
-    <script type="text/javascript" src="static/scripts/1-hbnb.js"></script>
   </body>
 </html>
