--- a/web_dynamic/templates/1-hbnb.html
+++ b/web_dynamic/templates/1-hbnb.html
@@ -38,7 +38,7 @@
 	</div>
 	<div class="amenities">
 	  <h3>Amenities</h3>
-	  <h4>&nbsp;</h4>
+	  <div><h4>&nbsp;</h4></div>
 	  <div class="popover">
 	    <ul>
 	      {% for amenity in amenities %}
